--- a/bai thuc hanh 2/index.html
+++ b/bai thuc hanh 2/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
-    <link rel="stylesheet" href="./src/Styles/Styles.css">
+    <link rel="stylesheet" href="Styles.css" type="text/css">
 </head>
 <body>
     <header>
-        <a href="#"><img src="./src/img/Landing page V1/desktop/Logo.svg" alt="logo"></a>
-        <nav>
+        <a class="logo" href="#"><img src="./src/img/Landing page V1/desktop/Logo.svg" alt="logo"></a>
+        <nav class="bar">
             <ul>
                 <li><a href="#"></a>Products</li>
                 <li><a href="#"></a>Solutions</li>
